apps/argo-workflows/ingress.yaml
---
# argo external
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argo
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.francisco.com.au
    secretName: argo-tls
  rules:
  - host: argo.francisco.com.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              number: 2746
---
# argo internal. Point /etc/hosts to this ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-local-argo
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  rules:
    - host: argo.this
      http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  number: 2746
            path: /
            pathType: Prefix
